# itd-simulator

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSING.md  MANIFEST.in  MANIFEST.sha256  MODEL_REVISION  MODEL_STATUS.md  README.md  SECURITY.md  V29_0_STATUS.md  V29_10_STATUS.md  V29_11_STATUS.md  V29_12_STATUS.md  V29_13_STATUS.md  V29_14_STATUS.md  V29_15_STATUS.md  V29_16_STATUS.md  V29_17_STATUS.md  V29_18_STATUS.md  V29_4_STATUS.md  V29_5_STATUS.md  V29_6_STATUS.md  V29_7_STATUS.md  V29_8_STATUS.md  V29_9_STATUS.md  build_v29.py  compare_scenarios.py  itd_v10.py  itd_v29.py  oracle_harness.py  pyproject.toml  requirements.txt  run_validation.sh  validate_accelerating_frames_v24.py  validate_arbitrary_rotations_v14.py  validate_asymptotic_local_limiter_v27.py  validate_boundary_conditions_v12.py  (+43 more)
datasets/: registry.json
docs/: architecture.md  license_decision.md  numerical_methods.md  release_integrity.md  reproducibility.md  rust_oracle_contract.md  scientific_definition.md  security_performance_audit.md
itd-rs/: Cargo.toml
itd-rs/crates/itd-diagnostics/: Cargo.toml
itd-rs/crates/itd-diagnostics/src/: lib.rs
itd-rs/crates/itd-diagnostics/tests/: equivalence.rs
itd-rs/crates/itd-field/: Cargo.toml
itd-rs/crates/itd-field/src/: lib.rs
itd-rs/crates/itd-result/: Cargo.toml
itd-rs/crates/itd-result/src/: lib.rs
itd-rs/fixtures/: diagnostics.txt
itd_research/: __init__.py  __main__.py  analytical_cases.py  benchmark_runner.py  convergence.py  established_diagnostics.py  plotting.py  reporting.py  sensitivity.py  signature.py  temporal_scaling.py
itd_simulator/: __init__.py  __main__.py
itd_v19_results/: resolution_study.csv  resolution_study_summary.json
itd_v20_1_results/: decoupled_resolution_summary.json
itd_v20_results/: decoupled_resolution_study.csv  decoupled_resolution_summary.json
itd_v23_results/: calme_irrotationnel.csv
itd_v24_results/: objectivity_error_budget.csv  objectivity_error_budget.json  semilagrangian_order_certification.json  semilagrangian_phase_study.csv  semilagrangian_phase_study.json
itd_v29_core/: __init__.py  constants.py  entrypoint.py  geometric_transforms.py  material_deformation.py  material_interval.py  multiscale_structure.py  numerical_certification.py  periodic_transport.py  reference_frames.py  simulation_engine.py  spatial_geometry.py  spatial_operators.py  spatial_scaling.py  structural_metrics.py  time_geometry.py
itd_v29_results/: summary.csv  (+21 more)
(+241 files in other folders)
