[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itd-simulator"
version = "0.2.0"
description = "Deterministic research simulator for curvature-weighted rotational intensity and structural dynamics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tarek Zekriti", email = "194770978+CHECKUPAUTO@users.noreply.github.com" },
]
dependencies = [
  "numpy>=2.3.5,<3",
  "matplotlib>=3.11,<4",
]

[project.optional-dependencies]
validation = [
  "scipy>=1.17,<2",
  "pytest>=9,<10",
]
dev = [
  "build>=1.5,<2",
  "mypy>=2.3,<3",
  "pip-audit>=2.10,<3",
  "pytest>=9,<10",
  "ruff>=0.15,<0.16",
]

[project.scripts]
itd-simulator = "itd_v29_core.entrypoint:main"

[project.urls]
Repository = "https://github.com/Memorithm/itd-simulator"
Issues = "https://github.com/Memorithm/itd-simulator/issues"

[tool.setuptools]
packages = ["itd_simulator", "itd_v29_core", "itd_research"]
py-modules = ["compare_scenarios", "itd_v29"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
  "itd_v10.py",
  "tools/finish_v29_series.py",
  "validate_*.py",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"itd_v29.py" = ["F401"]
"tools/test_dependency_analyser.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["itd_v29_core.*", "itd_v29", "compare_scenarios", "numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true
